[gd_scene load_steps=31 format=3 uid="uid://cxddpve567luf"]

[ext_resource type="PackedScene" uid="uid://foaj3o556i88" path="res://raw_assets/TrainBase.blend" id="1_52fb6"]
[ext_resource type="Script" uid="uid://dieo8wand5g3b" path="res://Scripts/main_scene.gd" id="1_drdnd"]
[ext_resource type="PackedScene" uid="uid://c27iw0ytkgcnm" path="res://Card Game/Scenes/Board.tscn" id="3_jv6wh"]
[ext_resource type="PackedScene" uid="uid://cgqj30855y5vj" path="res://raw_assets/BEUASTYYYYY.blend" id="3_m1efj"]
[ext_resource type="PackedScene" uid="uid://dos0jcx7lyvfx" path="res://Scenes/CaveWalls.tscn" id="3_psl12"]
[ext_resource type="Script" uid="uid://nwhuyg4mi4p" path="res://Scenes/PlayerObjects/hand.gd" id="4_maf8m"]
[ext_resource type="PackedScene" uid="uid://5yf0piy2h2c3" path="res://raw_assets/Hand.blend" id="5_huasi"]
[ext_resource type="PackedScene" uid="uid://cuah32gd4hyyy" path="res://Scenes/player_camera.tscn" id="5_iacmt"]
[ext_resource type="AudioStream" uid="uid://ck57upq11ssli" path="res://raw_assets/sounds/cardplace.wav" id="5_lhp3t"]
[ext_resource type="Script" uid="uid://csxqabxu237o0" path="res://Scripts/beuastyyyyy.gd" id="6_ioaeq"]
[ext_resource type="PackedScene" uid="uid://cbhk6m8pavkcx" path="res://Card Game/Scenes/card_position.tscn" id="6_m1efj"]
[ext_resource type="Texture2D" uid="uid://dyk63kkr1lnkx" path="res://raw_assets/textures/None-color.png" id="7_7ewk0"]
[ext_resource type="Script" uid="uid://ddbj4q1yclutr" path="res://Scripts/AnimationTree.gd" id="8_76v2p"]
[ext_resource type="PackedScene" uid="uid://2dinqbum68si" path="res://Scenes/KeyIndicator.tscn" id="8_m1efj"]
[ext_resource type="PackedScene" uid="uid://bt1yeo0ewckf3" path="res://Items/Scenes/ItemSpawner.tscn" id="10_mai8y"]
[ext_resource type="PackedScene" uid="uid://b1m5iaasfpavd" path="res://TitleScrene/Scenes/menu.tscn" id="12_drdnd"]
[ext_resource type="PackedScene" uid="uid://b01dgcxrxgo05" path="res://raw_assets/realhand.blend" id="12_gnsmo"]
[ext_resource type="PackedScene" uid="uid://cm2wnl7bl5fa0" path="res://Scenes/speech_text.tscn" id="17_psl12"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_52fb6"]
sky_top_color = Color(0, 0, 0, 1)
sky_horizon_color = Color(0, 0, 0, 1)
sky_curve = 0.235375
ground_bottom_color = Color(0, 0, 0, 1)
ground_horizon_color = Color(0.405874, 0.297608, 0.29799, 1)

[sub_resource type="Sky" id="Sky_76v2p"]
sky_material = SubResource("ProceduralSkyMaterial_52fb6")

[sub_resource type="Environment" id="Environment_6l7je"]
background_energy_multiplier = 0.0
sky = SubResource("Sky_76v2p")
ambient_light_color = Color(0.538073, 0.226502, 0.0404546, 1)
ambient_light_energy = 0.68
fog_enabled = true
fog_mode = 1
fog_light_color = Color(0.457633, 0.333558, 0.148455, 1)
fog_light_energy = 0.33
fog_density = 1.0
fog_depth_curve = 0.63728

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7ewk0"]
albedo_texture = ExtResource("7_7ewk0")

[sub_resource type="Animation" id="Animation_drdnd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TargetRightArm:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-1.64735, -2.09274, -1.05924)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TargetRightArm:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.629707, -2.82335, -1.27889)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Armature/Skeleton3D/LookAt:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-3.08733, 2.67794, -0.0854607)]
}

[sub_resource type="Animation" id="Animation_7ewk0"]
resource_name = "end"
length = 0.6735
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Armature/Skeleton3D/LookAt:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.666667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-3.08733, 2.67794, -0.0854607), Vector3(-3.08733, 3.15332, -0.0854616)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TargetRightArm:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-1.64735, -2.09274, -1.05924)]
}

[sub_resource type="Animation" id="Animation_76v2p"]
resource_name = "grab card"
length = 2.654
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TargetRightArm:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.162081, 0.36198, 0.448423, 0.6, 0.794196, 1.1, 1.39447, 1.8, 2.13333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 0.574349, 1, 1),
"update": 0,
"values": [Vector3(-1.64735, -2.09274, -1.05924), Vector3(-2.3781, -1.15231, -1.08361), Vector3(-3.29358, -1.21983, -1.54732), Vector3(-3.29358, -1.21983, -1.54732), Vector3(-1.93866, -1.14576, -1.9906), Vector3(-1.86227, -2.42868, -0.526814), Vector3(-1.64735, -2.09274, -1.05924), Vector3(-1.66854, -1.56009, -0.424025), Vector3(-1.68, -0.575, -0.076), Vector3(-1.81, -0.691, -0.069)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TargetRightArm:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.36198, 0.448423, 0.6, 0.794196, 0.8, 1.1, 1.39447, 1.58377, 1.93333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 0.574349, 1, 1),
"update": 0,
"values": [Vector3(-1.3689, 1.13984, 0.731185), Vector3(-0.910102, 0.187708, 1.28087), Vector3(-0.910102, 0.187708, 1.28087), Vector3(-0.969155, 0.31026, 1.21012), Vector3(-1.16613, 0.719048, 0.974119), Vector3(-1.02398, -2.95946, 0.377056), Vector3(-0.629707, -2.82335, -1.27889), Vector3(-1.16072, -2.40215, -1.79576), Vector3(-0.534074, -2.84565, -1.23836), Vector3(-2.05774, -1.89368, -2.19039)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Armature/Skeleton3D/LookAt:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.00540269, 0.567283, 1.14537, 1.73967, 1.9, 2, 2.0718, 2.4),
"transitions": PackedFloat32Array(1, 0.34151, 0.34151, 0.34151, 1, 1, 0.615572, 1, 1),
"update": 0,
"values": [Vector3(-3.08733, 2.67794, -0.0854607), Vector3(-3.08733, 2.67794, -0.0854607), Vector3(-3.06303, 2.26512, -0.814162), Vector3(-3.11902, 1.62857, 0.864879), Vector3(-3.11902, 1.83172, 0.864878), Vector3(-3.11902, 1.83172, 0.864878), Vector3(-3.08687, 1.83172, -0.0991707), Vector3(-3.08298, 1.83172, -0.21604), Vector3(-3.08298, 1.83172, -0.21604)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Board")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.433333, 1.76667),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"draw_lady"
}, {
"args": [],
"method": &"put_in_hand"
}]
}

[sub_resource type="Animation" id="Animation_ioaeq"]
resource_name = "play_card"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TargetRightArm:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-1.68038, -1.32614, -0.0690174), Vector3(-1.64735, -2.09274, -1.05924)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TargetRightArm:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.534074, -2.84565, -1.23836), Vector3(-1.25366, -1.13622, -3.12574)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ioaeq"]
_data = {
&"RESET": SubResource("Animation_drdnd"),
&"end": SubResource("Animation_7ewk0"),
&"grab card": SubResource("Animation_76v2p"),
&"play_card": SubResource("Animation_ioaeq")
}

[sub_resource type="Animation" id="Animation_psl12"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%HandLeft:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.626742, 1.08132, -2.92225)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("%HandLeft:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-1.08467, 0.72229, -1.88639)]
}

[sub_resource type="Animation" id="Animation_gnsmo"]
resource_name = "idle"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%HandLeft:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.71),
"transitions": PackedFloat32Array(0.435275, 0.933033),
"update": 0,
"values": [Vector3(0.626742, 1.09858, -2.92225), Vector3(0.627, 1.093, -2.922)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("%HandLeft:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 2.11),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-1.08467, 0.72229, -1.88639), Vector3(-1.06931, 0.717548, -1.90536)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2ebs2"]
_data = {
&"RESET": SubResource("Animation_psl12"),
&"idle": SubResource("Animation_gnsmo")
}

[node name="MainScene" type="Node3D"]
script = ExtResource("1_drdnd")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_6l7je")

[node name="Enviornment" type="Node3D" parent="."]

[node name="TrainBase" parent="Enviornment" instance=ExtResource("1_52fb6")]

[node name="CaveWalls" parent="Enviornment" instance=ExtResource("3_psl12")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 21.7947, -14.555, -21.8579)

[node name="CaveWalls2" parent="Enviornment" instance=ExtResource("3_psl12")]
transform = Transform3D(-1, 0, 1.50996e-07, 0, 1, 0, 1.50996e-07, 0, 1, 21.7947, -14.555, 21.7185)

[node name="LightOrganizer" type="Node3D" parent="Enviornment"]

[node name="OmniLight3D" type="OmniLight3D" parent="Enviornment/LightOrganizer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8.37103, -3.44959)
omni_range = 18.0

[node name="OmniLight3D2" type="OmniLight3D" parent="Enviornment/LightOrganizer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.39144, 3.42363, -0.773763)
light_color = Color(0.490608, 0.266277, 0.118523, 1)
omni_range = 18.0

[node name="OmniLight3D7" type="OmniLight3D" parent="Enviornment/LightOrganizer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.78936, 0.718782, -2.69917)
light_color = Color(0.490608, 0.266277, 0.118523, 1)
omni_range = 18.0

[node name="OmniLight3D4" type="OmniLight3D" parent="Enviornment/LightOrganizer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.96008, 3.42363, -0.773763)
light_color = Color(0.495806, 0.269393, 0.120291, 1)
omni_range = 18.0

[node name="OmniLight3D3" type="OmniLight3D" parent="Enviornment/LightOrganizer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.89075, 3.42363, -0.773763)
light_color = Color(0.490608, 0.266277, 0.118523, 1)
omni_range = 18.0

[node name="OmniLight3D5" type="OmniLight3D" parent="Enviornment/LightOrganizer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.04062, 3.42363, -0.773763)
light_color = Color(0.490608, 0.266277, 0.118523, 1)
omni_range = 18.0

[node name="OmniLight3D6" type="OmniLight3D" parent="Enviornment/LightOrganizer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12.3, 3.42363, -0.821783)
light_color = Color(0.490608, 0.266277, 0.118523, 1)
omni_range = 18.0

[node name="OmniLight3D8" type="OmniLight3D" parent="Enviornment/LightOrganizer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.73775, 1.36179, -8.98034)
light_color = Color(0.842472, 0.504504, 0.291747, 1)
omni_range = 17.0

[node name="SpotLight3D" type="SpotLight3D" parent="Enviornment/LightOrganizer"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -4.06635, 3.69345, -2.7297)
light_color = Color(0.346557, 0.270714, 0.224064, 1)
light_energy = 9.727
spot_range = 12.2471
spot_angle = 31.2114
metadata/_edit_lock_ = true

[node name="CSGBox3D" type="CSGBox3D" parent="Enviornment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5, 0.501411)
size = Vector3(53, 5, 21)

[node name="CSGBox3D2" type="CSGBox3D" parent="Enviornment"]
transform = Transform3D(0.817887, 0.575368, 0.00338627, -0.57489, 0.816938, 0.0459615, 0.0236784, -0.0395381, 0.998937, 280.624, -184.935, 7.3366)
size = Vector3(630.338, 5, 21)

[node name="Board" parent="." instance=ExtResource("3_jv6wh")]
transform = Transform3D(-0.000345905, -0.000407933, -0.0455597, -3.09722e-06, 0.045561, -0.000407935, 0.0455615, -1.20246e-11, -0.000345919, -4.48593, 1.017, -2.61904)

[node name="AnimationManager" type="Node" parent="."]
script = ExtResource("8_76v2p")

[node name="LadyPlace" type="AudioStreamPlayer" parent="AnimationManager"]
stream = ExtResource("5_lhp3t")

[node name="BEUASTYYYYY" parent="." instance=ExtResource("3_m1efj")]
transform = Transform3D(0.315749, 0, 0.0105296, 0, 0.315924, 0, -0.0105296, 0, 0.315749, -3.20038, 1.44492, -2.65791)
script = ExtResource("6_ioaeq")

[node name="Icosphere_002" parent="BEUASTYYYYY/Armature/Skeleton3D" index="0"]
surface_material_override/0 = SubResource("StandardMaterial3D_7ewk0")

[node name="SkeletonIK3D" type="SkeletonIK3D" parent="BEUASTYYYYY/Armature/Skeleton3D" index="1"]
transform = Transform3D(0.136063, -0.0327632, 0.990158, 0.97302, -0.183557, -0.139781, 0.18633, 0.982463, 0.00690404, 0, 0, 0)
root_bone = &"RightArm"
tip_bone = &"rhand"
target_node = NodePath("../../../TargetRightArm")

[node name="LookAt" type="Marker3D" parent="BEUASTYYYYY/Armature/Skeleton3D" index="2"]
transform = Transform3D(0.999997, 0, 3.72529e-09, 0, 1, 0, -3.72529e-09, 0, 0.999997, -3.08733, 2.67794, -0.0854607)

[node name="LookAtModifier3D" type="LookAtModifier3D" parent="BEUASTYYYYY/Armature/Skeleton3D" index="3"]
target_node = NodePath("../LookAt")
bone_name = "Head"
bone = 2
forward_axis = 1
primary_rotation_axis = 2
duration = 0.5
transition_type = 7

[node name="BoneAttachment3D" type="BoneAttachment3D" parent="BEUASTYYYYY/Armature/Skeleton3D" index="4"]
transform = Transform3D(0.626057, -0.477239, 0.616681, -0.0225149, -0.801576, -0.597469, 0.779452, 0.360165, -0.512577, -1.49745, 1.21723, 3.62426)
bone_name = "LeftForarm.001"
bone_idx = 5

[node name="LadyHandOrganizer" type="Node3D" parent="BEUASTYYYYY/Armature/Skeleton3D/BoneAttachment3D"]
transform = Transform3D(-2.52265, -5.32045, 0.0160148, 4.10036, -1.95543, -3.74626, 3.39035, -1.59383, 4.54274, -0.296731, 0.805897, -0.415325)

[node name="CardPosition" parent="BEUASTYYYYY/Armature/Skeleton3D/BoneAttachment3D/LadyHandOrganizer" instance=ExtResource("6_m1efj")]

[node name="CardPosition2" parent="BEUASTYYYYY/Armature/Skeleton3D/BoneAttachment3D/LadyHandOrganizer" instance=ExtResource("6_m1efj")]
transform = Transform3D(0.733209, 0.151692, -0.662869, -0.156638, 0.986263, 0.0524392, 0.661718, 0.0653815, 0.746897, 0.0220165, -0.000840425, 0.00700903)

[node name="CardPosition3" parent="BEUASTYYYYY/Armature/Skeleton3D/BoneAttachment3D/LadyHandOrganizer" instance=ExtResource("6_m1efj")]
transform = Transform3D(0.793241, -0.0544398, -0.60647, 0.129268, 0.988348, 0.0803592, 0.595028, -0.142141, 0.791036, 0.0288976, 0.00519943, 0.0163954)

[node name="CardPosition4" parent="BEUASTYYYYY/Armature/Skeleton3D/BoneAttachment3D/LadyHandOrganizer" instance=ExtResource("6_m1efj")]
transform = Transform3D(0.406221, 0.18996, -0.893812, -0.139416, 0.979585, 0.144828, 0.903078, 0.0657799, 0.424412, 0.0491991, -0.00112271, 0.036049)

[node name="CardPosition5" parent="BEUASTYYYYY/Armature/Skeleton3D/BoneAttachment3D/LadyHandOrganizer" instance=ExtResource("6_m1efj")]
transform = Transform3D(-0.121933, 0.127994, -0.984251, -0.21992, 0.963518, 0.152542, 0.967867, 0.235057, -0.0893367, 0.0392692, 0.00509369, 0.0625181)

[node name="righthand" type="BoneAttachment3D" parent="BEUASTYYYYY/Armature/Skeleton3D" index="5"]
transform = Transform3D(0.592408, -0.685524, -0.423214, -0.461062, -0.719269, 0.519687, -0.660662, -0.112739, -0.742169, -1.27475, 1.29262, -3.68232)
bone_name = "rhand"
bone_idx = 22

[node name="Node3D" type="Node3D" parent="BEUASTYYYYY/Armature/Skeleton3D/righthand"]
transform = Transform3D(1, 1.95578e-08, 1.49012e-07, 6.0536e-09, 1, 3.2247e-08, 5.96046e-08, 1.05938e-08, 1, -0.501708, 0.964754, 0.0275488)

[node name="AnimationPlayer" parent="BEUASTYYYYY" index="1"]
autoplay = "idle"

[node name="beautyAnimator" type="AnimationPlayer" parent="BEUASTYYYYY"]
libraries = {
&"": SubResource("AnimationLibrary_ioaeq")
}
playback_default_blend_time = 0.5

[node name="TargetRightArm" type="Marker3D" parent="BEUASTYYYYY"]
transform = Transform3D(-0.449799, -0.856575, -0.252883, -0.774008, 0.232581, 0.588906, -0.445628, 0.460624, -0.767615, -1.64735, -2.09274, -1.05924)

[node name="blinktimer" type="Timer" parent="BEUASTYYYYY"]
autostart = true

[node name="ItemSpawner" parent="." instance=ExtResource("10_mai8y")]
transform = Transform3D(0.826884, 0, -0.562372, 0, 1, 0, 0.562372, 0, 0.826884, -5.31938, 1.56161, -1.648)

[node name="PlayerBody" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.67503, 0, 0)

[node name="PlayerAnimator" type="AnimationPlayer" parent="PlayerBody"]
root_node = NodePath("../PlayerCamera")
libraries = {
&"": SubResource("AnimationLibrary_2ebs2")
}
autoplay = "idle"

[node name="HandLeft" type="Node3D" parent="PlayerBody"]
unique_name_in_owner = true
transform = Transform3D(0.322771, 0.894661, 0.308871, -0.444131, -0.145011, 0.884149, 0.835804, -0.422556, 0.350541, 0.626742, 1.08132, -2.92225)
script = ExtResource("4_maf8m")

[node name="realhand" parent="PlayerBody/HandLeft" instance=ExtResource("12_gnsmo")]
transform = Transform3D(0.0132656, 0.145428, -0.127581, -0.124167, 0.104466, 0.106168, 0.148353, 0.0744299, 0.100268, -0.0413365, 0.163523, -0.02089)

[node name="Skeleton3D" parent="PlayerBody/HandLeft/realhand/Armature" index="0"]
bones/1/position = Vector3(0.0170222, 0.387656, 0.444648)
bones/1/rotation = Quaternion(0.181904, 0.247774, 0.0442437, 0.950558)
bones/2/rotation = Quaternion(0.119666, -0.0359444, 0.104264, 0.98667)
bones/3/rotation = Quaternion(0.0101159, -0.145738, 0.0298799, 0.98882)
bones/4/rotation = Quaternion(-0.0189644, 0.0337102, -0.129941, 0.990767)
bones/5/rotation = Quaternion(0.00159035, 0.0332982, -0.181548, 0.982817)
bones/6/position = Vector3(0.00739156, 0.780642, 0.077503)
bones/6/rotation = Quaternion(-0.149555, -0.0368979, -0.0180769, 0.987899)
bones/7/rotation = Quaternion(-0.0236685, 0.0421314, -0.109997, 0.992757)
bones/8/rotation = Quaternion(0.00492656, 0.0669809, -0.191173, 0.979256)
bones/9/position = Vector3(-0.00924348, 0.829258, -0.102702)
bones/9/rotation = Quaternion(-0.125266, -0.0137275, -0.017329, 0.991877)
bones/10/rotation = Quaternion(-0.0174335, 0.0359198, -0.111872, 0.99292)
bones/11/rotation = Quaternion(0.013464, 0.0344327, -0.116578, 0.992493)
bones/12/position = Vector3(-0.0536629, 0.844324, -0.286648)
bones/12/rotation = Quaternion(-0.050744, -0.02196, -0.0284499, 0.998065)
bones/13/rotation = Quaternion(-0.0178172, 0.0414239, -0.110181, 0.992888)
bones/14/rotation = Quaternion(0.0131142, 0.0358701, -0.104066, 0.993837)

[node name="Mesh" parent="PlayerBody/HandLeft" instance=ExtResource("5_huasi")]
visible = false

[node name="FingerPositions" type="Node3D" parent="PlayerBody/HandLeft"]

[node name="1" type="Marker3D" parent="PlayerBody/HandLeft/FingerPositions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0817568, 0.245508, 0.0394814)

[node name="2" type="Marker3D" parent="PlayerBody/HandLeft/FingerPositions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.028941, 0.248324, 0.0394814)

[node name="3" type="Marker3D" parent="PlayerBody/HandLeft/FingerPositions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0145642, 0.244885, 0.0394814)

[node name="4" type="Marker3D" parent="PlayerBody/HandLeft/FingerPositions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0549277, 0.23818, 0.0303932)

[node name="5" type="Marker3D" parent="PlayerBody/HandLeft/FingerPositions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0990179, 0.177485, -0.00908822)

[node name="HandCardOrganizer" type="Node3D" parent="PlayerBody/HandLeft"]
transform = Transform3D(0.990235, -0.135769, 0.0316375, 0.139137, 0.976624, -0.163847, -0.00865277, 0.166649, 0.985978, 0.0168069, 0.0206628, -0.0269839)

[node name="CardPosition" parent="PlayerBody/HandLeft/HandCardOrganizer" instance=ExtResource("6_m1efj")]
transform = Transform3D(0.830779, 0.357994, 0.4262, 0.548611, -0.39738, -0.735605, -0.0939788, 0.844943, -0.526535, -0.0764231, 0.188268, 0.0593501)

[node name="CardPosition2" parent="PlayerBody/HandLeft/HandCardOrganizer" instance=ExtResource("6_m1efj")]
transform = Transform3D(0.955657, 0.225055, 0.189923, 0.285818, -0.553557, -0.782229, -0.0709115, 0.801826, -0.593336, -0.0357123, 0.21556, 0.0571123)

[node name="CardPosition3" parent="PlayerBody/HandLeft/HandCardOrganizer" instance=ExtResource("6_m1efj")]
transform = Transform3D(0.995597, -0.0215565, -0.0912207, -0.0893729, -0.511681, -0.854515, -0.0282555, 0.858905, -0.511354, 0.0198447, 0.218987, 0.0521822)

[node name="CardPosition4" parent="PlayerBody/HandLeft/HandCardOrganizer" instance=ExtResource("6_m1efj")]
transform = Transform3D(0.855332, -0.400109, -0.32912, -0.477712, -0.363244, -0.799904, 0.200498, 0.841407, -0.501831, 0.0726406, 0.196224, 0.062027)

[node name="CardPosition5" parent="PlayerBody/HandLeft/HandCardOrganizer" instance=ExtResource("6_m1efj")]
transform = Transform3D(0.738716, -0.388776, -0.550592, -0.663548, -0.276064, -0.695336, 0.118332, 0.879001, -0.461904, 0.100763, 0.158365, 0.0672782)

[node name="KeyIndicators" type="Node3D" parent="PlayerBody/HandLeft"]

[node name="KeyIndicator" parent="PlayerBody/HandLeft/KeyIndicators" node_paths=PackedStringArray("cardPlacement") instance=ExtResource("8_m1efj")]
transform = Transform3D(0.126617, -0.0920454, 0.0663004, 0.112434, 0.0886423, -0.0916578, 0.0150569, 0.112117, 0.126898, -0.11784, 0.215026, 0.101407)
cardPlacement = NodePath("../../HandCardOrganizer/CardPosition")

[node name="KeyIndicator2" parent="PlayerBody/HandLeft/KeyIndicators" node_paths=PackedStringArray("cardPlacement") instance=ExtResource("8_m1efj")]
transform = Transform3D(0.154839, -0.0575522, 0.0401579, 0.0696165, 0.113687, -0.105493, 0.00885839, 0.11253, 0.127116, -0.063726, 0.256446, 0.107148)
cardPlacement = NodePath("../../HandCardOrganizer/CardPosition2")
key = "S"

[node name="KeyIndicator3" parent="PlayerBody/HandLeft/KeyIndicators" node_paths=PackedStringArray("cardPlacement") instance=ExtResource("8_m1efj")]
transform = Transform3D(0.169719, -0.00895983, -0.00389551, 0.00412107, 0.127109, -0.112811, 0.00885839, 0.11253, 0.127116, 0.00674344, 0.2813, 0.0943525)
cardPlacement = NodePath("../../HandCardOrganizer/CardPosition3")
key = "D"

[node name="KeyIndicator4" parent="PlayerBody/HandLeft/KeyIndicators" node_paths=PackedStringArray("cardPlacement") instance=ExtResource("8_m1efj")]
transform = Transform3D(0.158652, 0.0435114, -0.0428513, -0.0580098, 0.144659, -0.0678873, 0.0190879, 0.0779781, 0.14985, 0.0762496, 0.256206, 0.0943525)
cardPlacement = NodePath("../../HandCardOrganizer/CardPosition4")
key = "F"

[node name="KeyIndicator5" parent="PlayerBody/HandLeft/KeyIndicators" node_paths=PackedStringArray("cardPlacement") instance=ExtResource("8_m1efj")]
transform = Transform3D(0.13682, 0.0803188, -0.0610673, -0.100298, 0.119464, -0.0675909, 0.0109796, 0.0904278, 0.143535, 0.128919, 0.216262, 0.0943525)
cardPlacement = NodePath("../../HandCardOrganizer/CardPosition5")
key = "Space"

[node name="HandRight" type="Node3D" parent="PlayerBody"]
unique_name_in_owner = true
transform = Transform3D(-0.350176, 0.936302, 0.0267549, 0.471332, 0.15145, 0.868855, 0.809459, 0.316862, -0.494344, 0.541789, 1.08838, -2.36465)
script = ExtResource("4_maf8m")

[node name="ItemPosition" type="Marker3D" parent="PlayerBody/HandRight"]
transform = Transform3D(0.999999, 0, 5.96046e-08, -1.78814e-07, 1, -5.96046e-08, -1.78814e-07, -5.96046e-08, 0.999999, 0.022009, 0.144684, 0.0479703)

[node name="Mesh" parent="PlayerBody/HandRight" instance=ExtResource("5_huasi")]

[node name="FingerPositions" type="Node3D" parent="PlayerBody/HandRight"]

[node name="1" type="Marker3D" parent="PlayerBody/HandRight/FingerPositions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0817568, 0.245508, 0.0394814)

[node name="2" type="Marker3D" parent="PlayerBody/HandRight/FingerPositions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.028941, 0.248324, 0.0394814)

[node name="3" type="Marker3D" parent="PlayerBody/HandRight/FingerPositions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0145642, 0.244885, 0.0394814)

[node name="4" type="Marker3D" parent="PlayerBody/HandRight/FingerPositions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0549277, 0.23818, 0.0303932)

[node name="5" type="Marker3D" parent="PlayerBody/HandRight/FingerPositions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0990179, 0.177485, -0.00908822)

[node name="PlayerCamera" parent="PlayerBody" instance=ExtResource("5_iacmt")]
transform = Transform3D(-3.61999e-06, 0, -1, 0, 1, 0, 1, 0, -3.61999e-06, 0.476291, 1.47022, -2.64495)
current = true
fov = 64.6875

[node name="Menu" parent="." instance=ExtResource("12_drdnd")]
transform = Transform3D(0.475, 0, 0, 0, 0.475, 0, 0, 0, 0.475, -5.66453, 1.40962, -4.3482)

[node name="Speech Text" parent="." instance=ExtResource("17_psl12")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -3.46212, 2.03401, -2.69264)

[connection signal="timeout" from="BEUASTYYYYY/blinktimer" to="BEUASTYYYYY" method="_on_blinktimer_timeout"]

[editable path="BEUASTYYYYY"]
[editable path="PlayerBody/HandLeft/realhand"]
